--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/sequelize": "^9.0.0",
+    "class-transformer": "^0.5.1",
     "compression": "^1.7.4",
+    "firebase-admin": "^11.4.0",
     "mysql2": "^2.3.3",
+    "passport": "^0.6.0",
+    "passport-firebase-jwt": "^1.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
