--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "rxjs": "^7.2.0",
     "sequelize": "^6.26.0",
     "sequelize-typescript": "^2.1.5",
-    "spdy": "^4.0.2"
+    "spdy": "^4.0.2",
+    "xss": "^1.0.14"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
