--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "migrate": "sequelize db:migrate",
-    "unmigrate": "sequelize db:migrate:undo"
+    "unmigrate": "sequelize db:migrate:undo",
+    "translations:generate": "node ./scripts/generate-translations.js",
+    "translations:apply": "node ./scripts/apply-translations.js"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -26,6 +28,7 @@
     "class-transformer": "^0.5.1",
     "compression": "^1.7.4",
     "firebase-admin": "^11.4.0",
+    "jsdom": "^21.1.1",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
     "passport-firebase-jwt": "^1.2.1",
