--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "rosplata-back",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
   "author": "",
   "private": false,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -25,8 +25,10 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/sequelize": "^9.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "class-transformer": "^0.5.1",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "firebase-admin": "^11.4.0",
     "jsdom": "^21.1.1",
     "mysql2": "^2.3.3",
