--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "migrate": "sequelize db:migrate",
     "unmigrate": "sequelize db:migrate:undo",
+    "migration:add": "sequelize migration:create",
     "translations:generate": "node ./scripts/generate-translations.js",
     "translations:apply": "node ./scripts/apply-translations.js",
     "translations:add": "node ./scripts/add-translation.js"
