--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "firebase-admin": "^11.4.0",
+    "isbot": "^3.6.10",
     "jsdom": "^21.1.1",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
