Adds demo login

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rosplata-back",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "",
   "author": "",
   "private": false,
@@ -14,8 +14,11 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "migrate": "sequelize db:migrate",
+    "migrate": "sequelize db:migrate && npm run seed",
     "unmigrate": "sequelize db:migrate:undo",
+    "seed": "sequelize db:seed:all",
+    "unseed": "sequelize db:seed:undo:all",
+    "reseed": "npm run unseed && npm run seed",
     "migration:add": "sequelize migration:create",
     "translations:generate": "node ./scripts/generate-translations.js",
     "translations:apply": "node ./scripts/apply-translations.js",
