--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "migrate": "sequelize db:migrate && npm run seed",
+    "migrate": "sequelize db:migrate",
     "unmigrate": "sequelize db:migrate:undo",
     "seed": "sequelize db:seed:all",
     "unseed": "sequelize db:seed:undo:all",
