--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "css-tokenize": "^1.0.1",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -69,6 +70,7 @@
     "sequelize-cli": "^6.5.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
+    "through2": "^4.0.2",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
