--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "migration:add": "sequelize migration:create",
     "translations:generate": "node ./scripts/generate-translations.js",
     "translations:apply": "node ./scripts/apply-translations.js",
-    "translations:add": "node ./scripts/add-translation.js"
+    "translations:add": "node ./scripts/add-translation.js",
+    "generate-cert:dev": "npx mkcert create-ca --cert ./test.crt --key ./test.key && npx mkcert create-cert --ca-cert ./test.crt --ca-key ./test.key",
+    "postinstall": "npm run generate-cert:dev && npm run translations:generate && npm run migrate && npm run seed"
   },
   "dependencies": {
     "@nestjs/common": "^9.4.0",
@@ -46,6 +48,7 @@
     "sequelize": "^6.29.0",
     "sequelize-typescript": "^2.1.5",
     "spdy": "^4.0.2",
+    "sqlite3": "^5.1.6",
     "ua-parser-js": "^1.0.35",
     "xss": "^1.0.14"
   },
@@ -66,6 +69,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
+    "mkcert": "^1.5.1",
     "prettier": "^2.3.2",
     "sequelize-cli": "^6.5.2",
     "source-map-support": "^0.5.20",
